# skelcd-control-openSUSE

./: .gitignore  .travis.sh  .travis.yml  CONTRIBUTING.md  MAINTAINER  MIT-LICENSE  Makefile  Makefile.am  POTFILES  README.md  RPMNAME  Rakefile  configure.ac.in
.github/: pull_request_template.md
.github/workflows/: ci.yml
control/: .gitignore  Makefile  Makefile.am  README.md  add-on-installation.glade  add-on-template_installation.glade  add-on-template_installation.xml  control.SLED.glade  control.SLED.xml  control.SLES-for-VMware.glade  control.SLES-for-VMware.xml  control.SLES-for-VMware.xsl  control.SLES.glade  control.SLES.xml  control.glade  control.openSUSE-promo.changes.xml  control.openSUSE-promo.xsl  control.openSUSE.glade  control.openSUSE.xml  control.rnc  control.rng  control.xml  indent.xsl  nonoss.xsl
package/: .gitignore  get_version_number.sh  pre_checkin.sh  skelcd-control-openSUSE-promo.spec  skelcd-control-openSUSE.changes  skelcd-control-openSUSE.spec  yast2-installation-control-openSUSE.changes  yast2-installation-control-openSUSE.spec  yast2-installation-control.changes  yast2-installation-control.spec
